# receipt_extraction_information

./: .gitignore  README.md  pyproject.toml
output/: output.ods
pkgs/: gpt4all.py  gpt4all_text_enhancement.py  image_polishing.py  image_processing.py  item_price_csv_dump.py  text_contour_finding.py  text_parsing.py  txt_combiner.py  utils.py
receipt_extraction_information/: gpt4all_text_enhancement.py  image2json.py  image_processing.py  json2odf.py  llm_image2json.py  receipt_extraction_information.py  test_image2json.py  text_parsing.py  txt_combiner.py
sandbox/: contour_finding.py  csv_combiner.py  deskewing.py  image_processing.py  item_price_csv_dump.py  test_image_processing.py  test_ocr.py  text_extraction.py  text_extraction_easyocr.py
