[project]
name = "receipt-extraction-information"
version = "0.1.0"
description = ""
authors = [{ name = "alessandro-maccario", email = "a.maccario1@campus.unimib.it" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=2.0.0,<2.1.0",
    "easyocr>=1.7.2,<2",
    "torch>=2.5.1,<3",
    "torchvision>=0.20.1,<0.21",
    "torchaudio>=2.5.1,<3",
    "pytesseract>=0.3.13,<0.4",
    "imutils>=0.5.4,<0.6",
    "tqdm>=4.67.0,<5",
    "textblob>=0.18.0.post0,<0.19",
    "textblob-de>=0.4.3,<0.5",
    "pandas>=2.2.3,<3",
    "symspellpy>=6.7.8,<7",
    "spacy>=3.8.2,<4",
    "gpt4all>=2.8.2,<3",
    "tabulate>=0.9.0,<0.10",
    "lxml>=6.1.0",
    "odfpy>=1.4.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
